--- a/script.html
+++ b/script.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title class=>Mixed Message Generator</title>
-  <link rel="stylesheet" href="file.css">
+  <link rel="stylesheet" href="script.css">
 </head>
 <body>
 
@@ -12,7 +12,7 @@
   <p id="p"></p>
   <button onclick="mixed()" class="b">Generate new message</button>
   
-  <script src="file.js"></script>
+  <script src="script.js"></script>
   
 </body>
 </html>
