--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@ p{
   <h1>Mixed Message Random Generator</h1>
   <p id="p"></p>
   <button onclick="mixed()" class="b">Generate new message</button>
+  <br>
+  <br>
+  <a href="./file.html">back to home</a> 
   
   <script>
     function randomMessage(){
@@ -40,6 +43,6 @@ function mixed(){
 }
 
   </script>
-  
+ 
 </body>
 </html>
